--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ h1{
   color: white;
 }
 #itemContainer{
+  position: relative;
+  z-index: 1;
   max-width: 1600px;
   margin: 0px auto 80px;
   display: grid;
@@ -61,6 +63,16 @@ a{
   margin: 0;
   padding: 0;
   background: transparent;
+}
+#loadingMessage{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  z-index: 10;
+  background-color: white;
+  padding: 8px;
+  font-size: 3vw;
 }
 .meta{
   width: 100%;
