--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a{
   text-shadow: none;
   box-shadow: none;
   transition: all 0.01s linear 0s !important;
-  margin: 0px 0px;
+  margin: 0px 0px 80px;
 }
 #loadMoreBtn:hover{
   color: #a65ca1;
@@ -135,12 +135,7 @@ a{
     margin-top: 20px;
   }
 }
-@media screen and (min-width: 1280px){
-  #itemContainer{
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-@media screen and (min-width: 1440px){
+@media screen and (min-width: 1651px){
   #itemContainer{
     grid-template-columns: repeat(5, 1fr);
   }
